# mscopilot-tui

./: .env.example  .gitignore  DEPLOYMENT-QUICK-START.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  examples.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
docs/: DEPLOYMENT-QUICK-START.md  DEPLOYMENT.md  SBOM.md
examples/: examples.py
scripts/: build.sh
src/copilot_tui/: __init__.py  api_client.py  config.py  models.py  persistence.py  tui_app.py
tests/: test_models.py
